--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "firebase": "^8.2.1",
     "next": "10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
@@ -15,6 +16,7 @@
   "devDependencies": {
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
+    "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   }
 }
